project/logs/2025-05-28 17-02-11.log
Use Adapter: NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel: 12.2

Complete create D3D12Device!!!

Begin CompileShader, path: Object3D.VS.hlsl, profile:vs_6_0

 Compile Succeeded, path: Object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path: Object3D.PS.hlsl, profile:ps_6_0

Object3D.PS.hlsl:22:31: error: use of undeclared identifier 'gTexture'
    float32_t4 textureColor = gTexture.Sample(gSampler, input.texcoord);
                              ^
Object3D.PS.hlsl:22:47: error: use of undeclared identifier 'gSampler'
    float32_t4 textureColor = gTexture.Sample(gSampler, input.texcoord);
                                              ^

 Compile Succeeded, path: Object3D.PS.hlsl, profile:ps_6_0

